2005-02-26  Chris Taylor  <chris@icculus.org>

	* ui/keypad.c, ui/ui.c: no unnecessarily including MS DOS
	headers

	* ui/window.c: only disable the keyboard for MS DOS

	* main/editor/eswitch.c: add remove_trigger_num
	(used by gamesave.c)

	* main/bmread.c, main/inferno.c: if EDITOR is defined, game 
	still works if there's no BITMAPS.TBL in a PhysicsFS search path

	* main/inferno.c: determine properly if 800x600 resolution is
	available (for editor)

	* main/editor/autosave.c, main/editor/macro.c, main/editor/med.c,
	main/editor/medsel.c, ui/checkbox.c, ui/file.c, ui/gadget.c,
	ui/inputbox.c, ui/keypad.c, ui/menu.c, ui/menubar.c, ui/radio.c,
	ui/window.c: use d_malloc, d_calloc, d_strdup and d_free

	* ui/keypad.c: fix the reading of keypad (.pad) files 

	* ui/menubar.c: use cfile to read the menubar file MED.MNU

2005-02-25  Chris Taylor  <chris@icculus.org>

	* arch/carbon/conf.h, D2X.make: no defining OGL in conf.h,
	allowing Mac OS 9 and X to both use conf.h but one can build for
	OpenGL while the other doesn't.

	* main/editor/mine.c: use the Descent 2 definitions for maximum
	segments and vertices

2005-02-25  Bradley Bell  <btb@icculus.org>

	* arch/dos/digi.c, arch/dos/digiallg.c, arch/dos/digimm.c,
	arch/linux/alsadigi, arch/win32/digi.c: rip out digiobj stuff, use
	d2src system for persistent sounds. Untested, of course.

	* ChangeLog-old: clean up old changelog a little

	* ChangeLog-old: converted old changelog to "cvs log" format, so
	it can be manipulated with cvs2cl and other tools.

2005-02-24  Tim Massey  <tmassey@obscorp.com>

	* main/inferno.c: allow -notitles to work in shareware [and
	non-RELEASE] version too. (d1x r1.35)

2005-02-24  Peter Hawkins  <peterh@isa.net.au>

	* arch/linux/alsadigi.c: update to alsa 1.0 API. (d1x r1.3)

2005-02-24  Matthew Mueller  <donut@dakotacom.net>

	* arch/ogl/gr.c: restore gamma ramp on exit since some drivers
	don't do it automatically (eg, ati's fglrx linux driver) (d1x
	r1.41)
