@@ -1,4 +1,4 @@
-/* $Id: keypress.c,v 1.4 2005-01-24 22:19:10 schaffner Exp $ */
+/* $Id: keypress.c,v 1.5 2005-02-27 03:55:46 chris Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -13,7 +13,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 */
 
 #ifdef RCS
-static char rcsid[] = "$Id: keypress.c,v 1.4 2005-01-24 22:19:10 schaffner Exp $";
+static char rcsid[] = "$Id: keypress.c,v 1.5 2005-02-27 03:55:46 chris Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -136,6 +136,8 @@ int GetKeyCode(char * text)
 
 		if (DoneButton->pressed)
 			break;
+
+		gr_update();
 	}
 
 	ui_close_window(wnd);
