@@ -1,4 +1,4 @@
-/* $Id: popup.c,v 1.5 2005-01-25 21:31:45 schaffner Exp $ */
+/* $Id: popup.c,v 1.6 2005-02-27 03:55:46 chris Exp $ */
 /*
 THE COMPUTER CODE CONTAINED HEREIN IS THE SOLE PROPERTY OF PARALLAX
 SOFTWARE CORPORATION ("PARALLAX").  PARALLAX, IN DISTRIBUTING THE CODE TO
@@ -13,7 +13,7 @@ COPYRIGHT 1993-1999 PARALLAX SOFTWARE CORPORATION.  ALL RIGHTS RESERVED.
 */
 
 #ifdef RCS
-static char rcsid[] = "$Id: popup.c,v 1.5 2005-01-25 21:31:45 schaffner Exp $";
+static char rcsid[] = "$Id: popup.c,v 1.6 2005-02-27 03:55:46 chris Exp $";
 #endif
 
 #ifdef HAVE_CONFIG_H
@@ -143,6 +143,7 @@ int PopupMenu( int NumButtons, char * text[] )
 			break;
 		}
 
+		gr_update();
 	}
 
 	ui_close_window(wnd);
