@@ -1,3 +1,9 @@
+2005-02-27  Chris Taylor  <chris@icculus.org>
+
+	* main/editor/med.c, ui/file.c, ui/keypress.c, ui/menu.c,
+	ui/menubar.c, ui/message.c, ui/number.c, ui/popup.c: call
+	gr_update in event loops
+
 2005-02-26  Chris Taylor  <chris@icculus.org>
 
 	* ui/keypad.c, ui/ui.c: no unnecessarily including MS DOS
